<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical"
    tools:context="cat.nubiola.estheredu.FullscreenActivity" >
	<TextView
	    android:id="@+id/labelProtocol"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/protocol"
	    android:labelFor="@+id/protocol"
	    android:textSize="20sp"
	    />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    android:paddingStart="@dimen/leftborder"
	    android:paddingEnd="@dimen/rightborder"
        android:paddingBottom="@dimen/border"
        android:paddingTop="@dimen/border">
	    <Spinner
	        android:id="@+id/protocol"
	        android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:background="@android:color/white"
	        android:entries="@array/protocolsList"
	        android:paddingLeft="@dimen/border"
	        android:paddingRight="@dimen/border"
	     />
	</LinearLayout>
    <TextView
	    android:id="@+id/labeldomain"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/domain"
	    android:labelFor="@+id/domainName"
	    android:textSize="20sp" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    android:paddingStart="@dimen/leftborder"
	    android:paddingEnd="@dimen/rightborder"
        android:paddingBottom="@dimen/border"
	    android:paddingTop="@dimen/border">

		<EditText
		    android:id="@+id/domainName"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@android:color/white"
		    android:textSize="20sp"
		    android:inputType="textUri" >

		</EditText>

    </LinearLayout>
    <TextView
	    android:id="@+id/labelport"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/port"
	    android:labelFor="@+id/port"
	    android:textSize="20sp" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    android:paddingStart="@dimen/leftborder"
	    android:paddingEnd="@dimen/rightborder"
        android:paddingBottom="@dimen/border"
        android:paddingTop="@dimen/border">

		<EditText
		    android:id="@+id/port"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@android:color/white"
		    android:textSize="20sp"
		    android:inputType="number" >

		</EditText>

    </LinearLayout>
    
    <TextView
	    android:id="@+id/labelpath"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/path"
	    android:labelFor="@+id/path"
	    android:textSize="20sp" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    android:paddingStart="@dimen/leftborder"
	    android:paddingEnd="@dimen/rightborder"
        android:paddingBottom="@dimen/border"
        android:paddingTop="@dimen/border">

		<EditText
		    android:id="@+id/path"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@android:color/white"
		    android:textSize="20sp"
		    android:inputType="textUri" >
		</EditText>

    </LinearLayout>
    <TextView
	    android:id="@+id/labelquery"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/query"
	    android:labelFor="@+id/query"
	    android:textSize="20sp" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    android:paddingStart="@dimen/leftborder"
	    android:paddingEnd="@dimen/rightborder"
        android:paddingBottom="@dimen/border"
        android:paddingTop="@dimen/border">

		<EditText
		    android:id="@+id/query"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@android:color/white"
		    android:textSize="20sp"
		    android:inputType="text" >
		</EditText>

    </LinearLayout>
	
    <TextView
	    android:id="@+id/labeluser"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/username"
	    android:labelFor="@+id/username"
	    android:textSize="20sp" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    android:paddingStart="@dimen/leftborder"
	    android:paddingEnd="@dimen/rightborder"
        android:paddingBottom="@dimen/border"
        android:paddingTop="@dimen/border">

		<EditText
		    android:id="@+id/username"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@android:color/white"
		    android:textSize="20sp"
		    android:inputType="textUri" >
		</EditText>

    </LinearLayout>
    
    <TextView
	    android:id="@+id/labelpassword"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/password"
	    android:labelFor="@+id/password"
	    android:textSize="20sp" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/black_overlay"
	    android:orientation="vertical"
	    android:paddingStart="@dimen/leftborder"
	    android:paddingEnd="@dimen/rightborder"
        android:paddingBottom="@dimen/border"
        android:paddingTop="@dimen/border">

		<EditText
		    android:id="@+id/password"
		    android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="@android:color/white"
		    android:textSize="20sp"
		    android:inputType="textPassword" >
		</EditText>

    </LinearLayout>
		
	<RelativeLayout
	    style="?android:attr/buttonBarStyle"
	    android:layout_width="264dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="40dp"
	    android:background="@color/black_overlay"
	    android:orientation="horizontal"
	    android:layout_gravity="center_horizontal"
	    >

		<ImageButton
		    android:contentDescription="@string/takePhoto"
	    	style="?android:attr/buttonBarStyle"
		    android:id="@+id/buttonPhoto"
		    android:layout_width="72dp"
		    android:layout_height="72dp"
		    android:layout_alignParentTop="true"
		    android:layout_alignParentStart="true"
	    	android:layout_marginStart="40dp"
	    	android:layout_marginEnd="20dp"
		    android:layout_gravity="center"
		    android:scaleType="centerCrop"
		    android:src="@drawable/camera" />

		<ImageButton
		    android:contentDescription="@string/captureQr"
		    style="?android:attr/buttonBarStyle"
		    android:id="@+id/configuraQR"
		    android:layout_width="72dp"
		    android:layout_height="72dp"
		    android:layout_alignParentTop="true"
		    android:layout_toEndOf="@+id/buttonPhoto"
		    android:layout_marginStart="20dp"
		    android:layout_marginEnd="40dp"
		    android:layout_gravity="center"
		    android:scaleType="centerCrop"
		    android:src="@drawable/qrcode" />

	</RelativeLayout>	
</LinearLayout>
